day04/workshop04/minio-full.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: minio-ns
---
apiVersion: v1
kind: Service
metadata:
  name: minio-hsvc
  namespace: minio-ns
  labels:
    app: minio
    name: minio-hsvc
spec:
  clusterIP: None
  selector:
    app: minio
    name: minio-po
  ports:
  - name: data
    port: 9000
    targetPort: 9000
  - name: console
    port: 9090
    targetPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: minio-ns
  labels:
    app: minio
    name: minio-hsvc
spec:
  type: ClusterIP
  selector:
    app: minio
    name: minio-po
  ports:
  - name: data
    port: 9000
    targetPort: 9000
  - name: console
    port: 9090
    targetPort: 9090
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio-sts
  namespace: minio-ns
  labels:
    app: minio
    name: minio-sts
spec:
  serviceName: minio-hsvc
  replicas: 3
  selector:
    matchLabels:
      app: minio
      name: minio-po
  volumeClaimTemplates:
  - metadata:
      name: data-vol
    spec:
      accessModes: [ ReadWriteOnce ]
      storageClassName: do-block-storage
      resources:
        requests:
          storage: 1Gi
  template:
    metadata:
      name: minio-po
      labels:
        app: minio
        name: minio-po
    spec:
      containers:
      - name: minio-container
        image: bitnami/minio:2023.9.23
        imagePullPolicy: IfNotPresent
        command:
        - minio
        - server
        - --address=:9000
        - --console-address=:9090
        - http://minio-sts-{0...2}.minio-hsvc.minio-ns.svc.cluster.local/data
        ports:
        - name: data
          containerPort: 9000
        - name: console
          containerPort: 9090
        volumeMounts:
        - name: data-vol
          mountPath: /data
        livenessProbe:
          httpGet:
            path: /minio/health/live
            port: 9000
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /minio/health/ready
            port: 9000
          periodSeconds: 60
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ing
  namespace: minio-ns
spec:
  ingressClassName: nginx
  rules:
  - host: console-146.190.193.95.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-svc
            port:
              number: 9090
  - host: data-146.190.193.95.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-svc
            port:
              number: 9000
